# nrf52820_s140

./: .gdbinit  .gitignore  .mcp.json  1  CLAUDE.md  Cargo.toml  Embed.toml  Readme.md  __build.rs  memory.x  run_all_tests.sh
.cargo/: config.toml
.claude/: settings.local.json
docs/: 00-initial_plan.txt  01-BLE_MODEM_ANALYSIS.md  02-IMPLEMENTATION_STATUS.md  02-RUST_IMPLEMENTATION_REQUIREMENTS.md  03-RUST_IMPLEMENTATION_PLAN.md  03A_Phase_GAP_Operations.md  03B_Phase_GATT_Foundation.md  03C_Phase_Event_System.md  03E_Memory_Optimization_Guide.md  04-CODE_STATUS_SUMMARY.md  04-PHASE_A_SPI_COMMUNICATION.md  04-PHASE_B_COMMAND_PROCESSING.md  04-PHASE_C_DYNAMIC_GATT.md  04-PHASE_D_EVENTS_AND_GAP.md  04-PHASE_E_INTEGRATION_TESTING.md  05D_Phase_Integration_Testing.md  07a-ServiceBuilder_Gap_Analysis.md  07b-Comprehensive_Requirements_Gap_Analysis.md  07c-ServiceBuilder_Implementation_Recommendation.md  08a-HOST_SPI_IMPLEMENTATION.md  08b-HOST_MODEM_IMPLEMENTATION.md  08c-HOST_BLE_PERIPHERAL_ANALYSIS.md  09-VALIDATED_IMPLEMENTATION_PLAN.md  REORGANIZATION_PROPOSAL.md  REORGANIZATION_REPORT.md
docs/archive/: 04-IMPLEMENTATION_TRACKER.md  04-PHASE_A_SPI_COMMUNICATION.md
src/: advertising.rs  bonding_service.rs  buffer_pool.rs  connection_manager.rs  dynamic_gatt.rs  events.rs  gap_state.rs  gatt_registry.rs  lib.rs  main.rs  mgmt_service.rs  notification_service.rs  protocol.rs  service_manager.rs  services.rs  spi_comm.rs  state.rs
src/ble/: advertising.rs  bonding.rs  connection.rs  dynamic.rs  events.rs  gap_state.rs  gatt_state.rs  manager.rs  mod.rs  notifications.rs  registry.rs  services.rs
src/commands/: gap.rs  gatts.rs  mod.rs  system.rs  uuid.rs
src/core/: memory.rs  mod.rs  protocol.rs  transport.rs
tests/: bonding_tests.rs  bonding_tests_1.rs  bonding_tests_2.rs  bonding_tests_3.rs  command_tests.rs  connection_tests.rs  echo_integration_test.rs  end_to_end_tests.rs  event_tests.rs  gatt_tests.rs  gatt_tests_1.rs  gatt_tests_2.rs  hello_world_test.rs  integration_tests.rs  notification_tests.rs  protocol_tests.rs  protocol_unit.rs  rust-toolchain.toml  spi_tests.rs  spi_tests_1.rs  spi_tests_2.rs  test_properties.md
tests/common/: mod.rs
