[package]
name = "nrf52820-s140-firmware"
version = "0.1.0"
edition = "2021"
authors = ["Tenkai Kariya"]

[dependencies]
# Core embassy framework
embassy-executor = { version = "0.9.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

embassy-nrf = { version = "0.7.0", features = [
  "nrf52820",
  "gpiote",
  "time-driver-rtc1",
  "defmt",
] }

nrf-softdevice = { version = "0.1", features = [
  "s140",
  "nrf52820",
  "defmt",
  "ble-peripheral",
  "ble-central",
  "ble-gatt-server",
  "critical-section-impl",
] }
# SoftDevice bindings

# Debug and utilities
defmt = { version = "1" }
defmt-rtt = "1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Core ARM (without critical-section-single-core to avoid conflict)
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Async utilities
heapless = { version = "0.9.1", default-features = false }
nb = "1.0"

# BLE Modem specific dependencies
atomic-pool = "1.0"
postcard = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
opt-level = 1
